# PcMapEngine

./: .gitignore  CMakeLists.txt  README.md
bak/canvas/: CMakeLists.txt
bak/canvas/cpp/: CMakeLists.txt  MapCanvas.cpp  MapCanvas.h
bak/symbol/cpp/: CMakeLists.txt  MapSymbol.cpp  MapSymbol.h  SymArc.h  SymCanvas.cpp  SymCanvas.h  SymChord.cpp  SymCircle.h  SymColor.cpp  SymEllipse.cpp  SymEllipse.h  SymFill.h  SymLineString.cpp  SymLineString.h  SymPie.cpp  SymPoint.cpp  SymPolygon.cpp  SymPolygon.h  SymRegularPolygon.cpp  SymRegularPolygon.h  SymShape.cpp  SymShape.h  SymSolidFill.cpp  SymSolidFill.h  SymStar.cpp  SymStar.h  SymStroke.cpp  SymStroke.h  SymSystemLine.cpp  SymSystemLine.h  SymText.cpp  SymText.h
canvas/c/: CMakeLists.txt
canvas/cpp/: Affine.cpp  Affine.h  CMakeLists.txt  MapCanvas.cpp  MapCanvas.h
data/: arc.json  border_province.json  chord.json  circle.json  city_4.json  ellipse.json  fill_solid.json  fill_solid_4.json  line_complex.json  line_dash.json  line_dash_dot.json  line_dash_dot_dot.json  line_solid.json  linestring.json  pie.json  polygon.json  rectangle.json  regularpolygon_3.json  regularpolygon_4.json  regularpolygon_5.json  regularpolygon_6.json  regularpolygon_7.json  regularpolygon_8.json  star_3.json  star_4.json  star_5.json  star_6.json  star_7.json  star_8.json  star_9.json  sym_to_png.sh  text_0.json  text_1.json  text_2.json  text_3.json  text_4.json  text_5.json  text_6.json  text_7.json  text_8.json  (+20 more)
engine/: CMakeLists.txt  JsonUtils.h  SymMath.h  map_engine_dll_exports.h  mapengine.pc.in
engine/canvas/: AffineTransformOperation.cpp  AffineTransformOperation.h  AffineTransformer.cpp  AffineTransformer.h  AngleUtil.cpp  AngleUtil.h  MapCanvas.cpp  MapCanvas.h
engine/symbol/: JsonUtils.h  MapSymbol.cpp  MapSymbol.h  Serialize.h  SymArc.cpp  SymCanvas.cpp  SymCanvas.h  SymChord.cpp  SymChord.h  SymCircle.cpp  SymColor.cpp  SymColor.h  SymEllipse.cpp  SymLineString.cpp  SymPie.cpp  SymPie.h  SymPoint.cpp  SymPoint.h  SymPolygon.cpp  SymPolygon.h  SymRectangle.cpp  SymRectangle.h  SymRegularPolygon.cpp  SymShape.cpp  SymShape.h  SymSolidFill.cpp  SymStar.cpp  SymStroke.cpp  SymStroke.h  SymSystemFill.cpp  SymSystemFill.h  SymSystemLine.cpp  SymText.cpp
engine_c/: CMakeLists.txt  mapengine_c.cpp  mapengine_c.h  mapengine_c.pc.in
symbol/: CMakeLists.txt
symbol/cpp/: CMakeLists.txt  JsonUtils.h  MapSymbol.cpp  MapSymbol.h  SymArc.cpp  SymArc.h  SymCanvas.cpp  SymCanvas.h  SymChord.cpp  SymChord.h  SymCircle.cpp  SymCircle.h  SymColor.cpp  SymColor.h  SymEllipse.cpp  SymEllipse.h  SymFill.cpp  SymFill.h  SymLineString.cpp  SymLineString.h  SymPie.cpp  SymPie.h  SymPoint.cpp  SymPoint.h  SymPolygon.cpp  SymPolygon.h  SymRectangle.cpp  SymRectangle.h  SymRegularPolygon.cpp  SymRegularPolygon.h  SymShape.cpp  SymShape.h  SymSolidFill.cpp  SymSolidFill.h  SymStar.cpp  SymStar.h  SymStroke.cpp  SymStroke.h  SymSystemLine.cpp  SymSystemLine.h
tools/: CMakeLists.txt
tools/fonts_info/: CMakeLists.txt  fonts_info.cpp
tools/mapviewer/: CMakeLists.txt  mapviewer.cpp
tools/skia/msys/: install_skia.sh
tools/skia/ubuntu/: compile.sh  install_skia.sh  uninstall_skia.sh
tools/sym2img/: CMakeLists.txt  sym2img.cpp
tools/sym2img_c/: CMakeLists.txt  sym2img_c.c
tools/symbols/: arc.json  chord.json  circle.json  ellipse.json  linestring.json  pie.json  polygon.json  rectangle.json  regularpolygon.json  systemline.json  text.json
tools/testmapcanvas/: CMakeLists.txt  default_point_sym.json  test.cpp
